# python-genezio-cli

./: .gitignore  pyproject.toml
.github/workflows/: publish-to-test-pypi.yml
genezio_cli/: __init__.py  install.py
genezio_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
